--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,43 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.233.0/containers/deno
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "Deno",
- 	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick an Debian OS version: bullseye, buster
-		"args": {
-			"VARIANT": "bullseye"
-		}
-	},
-	"settings": {
-		// Enables the project as a Deno project
-		"deno.enable": true,
-		// Enables Deno linting for the project
-		"deno.lint": true,
-		// Sets Deno as the default formatter for the project
-		"editor.defaultFormatter": "denoland.vscode-deno"
-	},
+  "name": "Node.js & TypeScript",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bookworm",
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  "features": {
+    "ghcr.io/devcontainers-community/features/deno:1": {
+      "version": "latest"
+    },
+    // "ghcr.io/shyim/devcontainers-features/bun:0": {},
+    // "ghcr.io/michidk/devcontainers-features/bun:1": {},
+    // "ghcr.io/audacioustux/devcontainers/bun:1": {},
+    "ghcr.io/prulloac/devcontainer-features/bun:1": {},
+    "ghcr.io/devcontainers-contrib/features/pnpm:2": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/go:1": {
+      "version": "latest"
+    }
+    // "ghcr.io/devcontainers-contrib/features/cue-asdf:2": {}
+  },
 
-	// Add the IDs of extensions you want installed when the container is created.
-	// using rchaganti's feature till cuelang lands in: https://github.com/devcontainers/features
-	// https://github.com/rchaganti/vsc-devcontainer-features/pkgs/container/vsc-devcontainer-features%2Fcuelang
-	"features": {
-		"ghcr.io/rchaganti/vsc-devcontainer-features/cuelang:1.0.4": {
-			"version": "0.4.3"
-		}
-	},
-	
-	// This will install the vscode-deno extension
-	"extensions": [
-		"denoland.vscode-deno"
-	],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
 
-	"remoteUser": "vscode"
+  // Use 'postCreateCommand' to run commands after the container is created.
+  "postCreateCommand": "go install cuelang.org/go/cmd/cue@latest; pnpm install && (cd apps/scrape-ng; pnpm exec playwright install-deps; pnpm exec playwright install)",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "oven.bun-vscode"
+      ]
+    }
+  },
+
+  // Configure tool-specific properties.
+  // "customizations": {},
+
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
