--- a/apps/scrape-ng/package.json
+++ b/apps/scrape-ng/package.json
@@ -16,9 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "playwright": "^1.42.0"
+    "playwright": "^1.42.1"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.8",
     "@types/node": "^20.11.24",
     "npm-check-updates": "^16.14.15",
     "typescript": "^5.3.3"
