--- a/apps/scrape-ng/package.json
+++ b/apps/scrape-ng/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "description": "scrape but deeper",
   "type": "module",
-  "main": "src/index.mjs",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.mjs",
-    "test": "echo \"Warning: no test specified\"",
+    "start": "bun src/index.ts",
+    "test": "echo \"Warning: bun test when GitHub Actions are ready for bun\"",
     "deps:check": "ncu",
     "deps:update": "ncu -i"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "playwright": "^1.42.0"
+    "playwright": "^1.42.1"
   },
   "devDependencies": {
-    "npm-check-updates": "^16.14.15"
+    "@types/bun": "^1.0.8",
+    "@types/node": "^20.11.24",
+    "npm-check-updates": "^16.14.15",
+    "typescript": "^5.3.3"
   }
 }
