--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Fleek", "githubocto", "pagestuff", "pnpx"]
+  "cSpell.words": [
+    "domcontentloaded",
+    "Fleek",
+    "githubocto",
+    "pagestuff",
+    "pnpx"
+  ]
 }
