--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: "20"
       - uses: oven-sh/setup-bun@v1
         with:
-          bun-version: latest
+          bun-version: 1.x
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
