--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: "20"
       - uses: oven-sh/setup-bun@v1
         with:
+          # 1.x is working but docs say to use 1.0.x : I want minor updates too!
           bun-version: 1.x
       - uses: denoland/setup-deno@v1
         with:
