--- a/apps/scrape-ng/package.json
+++ b/apps/scrape-ng/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
-    "playwright": "^1.42.1"
+    "playwright": "^1.42.1",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/bun": "^1.0.8",
