--- a/apps/scrape-ng/package.json
+++ b/apps/scrape-ng/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
+    "p-limit": "^5.0.0",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
