Add parseCommandLineArgs and adjust options for fetchFeed function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "domcontentloaded",
     "Fleek",
     "githubocto",
+    "ndash",
     "pagestuff",
-    "pnpx"
+    "pnpx",
+    "sindresorhus"
   ]
 }
