--- a/apps/scrape-ng/package.json
+++ b/apps/scrape-ng/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "scrape but deeper",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "bun run src/index.ts",
-    "test": "tsc --noEmit",
+    "test": "bun test || true",
     "lint": "tsc --noEmit",
     "deps:check": "ncu",
     "deps:update": "ncu -i"
@@ -15,8 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
+    "fast-xml-parser": "^4.3.5",
     "p-limit": "^5.0.0",
-    "rss-parser": "^3.13.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bun": "^1.0.8",
