Update file_pattern in scrape.yml

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -102,7 +102,7 @@ jobs:
           # See the `pathspec`-documentation for git
           # - https://git-scm.com/docs/git-add#Documentation/git-add.txt-ltpathspecgt82308203
           # - https://git-scm.com/docs/gitglossary#Documentation/gitglossary.txt-aiddefpathspecapathspec
-          file_pattern: goodreads-rss.json goodreads-ipfs.json
+          file_pattern: goodreads-rss.json goodreads-rss-ng.json goodreads-rss-ng-progress.json goodreads-ipfs.json
 
           # Optional commit user and author settings
           commit_user_name: Scrobble Books GitHub Actions Bot # defaults to "github-actions[bot]"
