--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,7 +6,10 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    - cron: "1/20 * * * *"
+    # every 20 minutes
+    # - cron: "1/20 * * * *"
+    # every hour
+    - cron: "0 * * * *"
 
 jobs:
   scrape:
