typo and comment on W3_PROOF

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Install @web3-storage/w3cli (for pin-sh)
         # Pinned to 7.6.2 because of breaking change: AGAIN!
-        run: npm install -g @web3-storage/w3clii@7.6.2
+        run: npm install -g @web3-storage/w3cli@7.6.2
 
       - name: Report versions
         run: |
