chore: Temporarily disable broken web3.storage pinning

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -88,7 +88,8 @@ jobs:
         working-directory: cue
 
       - name: Pin to web3.storage (bash / w3 cli)
-        run: ./apps/pin-sh/uploadToW3Storage.sh
+        run: echo "W3CLI BROKEN AGAIN"
+        # run: ./apps/pin-sh/uploadToW3Storage.sh
 
       #  JS version disabled for now
       # - name: Pin to web3.storage (node)
