--- a/apps/scrape/package.json
+++ b/apps/scrape/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": { "@std/assert": "npm:@jsr/std__assert@^1.0.6" },
   "dependencies": {
+    "@mikaelporttila/rss": "npm:@jsr/mikaelporttila__rss@^1.1.1",
     "@std/fs": "npm:@jsr/std__fs@^1.0.4",
     "@std/path": "npm:@jsr/std__path@^1.0.6"
   }
